# binder

./: meson.build
data/: binder.appdata.xml  binder.desktop  binder.desktop.in  gschema.xml  meson.build
meson/: post_install.py
po/: POTFILES  com.github.eldhrimer.binder.pot  es.po
src/: Application.vala  meson.build
src/widgets/: HeaderBar.vala  Window.vala
